
name:                setwall
version:             0.2.0
synopsis:            Set your wallpaper in Linux.
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          colingw@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable setwall
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , optparse-applicative >= 0.11.0.2
                     , parsec >= 3.1.9
                     , shelly >= 1.6.2.5
                     , text >= 1.2.0.5
                     , mwc-random >= 0.13.3.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
